--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -53,28 +53,33 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'temurin'
-
-      - name: Export database secrets
-        env:
-          DB_HOST: ${{ secrets.DB_HOST }}
-          DB_PORT: ${{ secrets.DB_PORT }}
-          DB_USER: ${{ secrets.DB_USER }}
-          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-          DB_NAME: ${{ secrets.DB_NAME }}
+      # - name: Set up JDK 17
+      #   uses: actions/setup-java@v3
+      #   with:
+      #     java-version: 17
+      #     distribution: 'temurin'
+# 
+      # - name: Export database secrets
+      #   env:
+      #     DB_HOST: ${{ secrets.DB_HOST }}
+      #     DB_PORT: ${{ secrets.DB_PORT }}
+      #     DB_USER: ${{ secrets.DB_USER }}
+      #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      #     DB_NAME: ${{ secrets.DB_NAME }}
+      #   run: |
+      #     echo "DB_HOST=${DB_HOST}" >> $GITHUB_ENV
+      #     echo "DB_PORT=${DB_PORT}" >> $GITHUB_ENV
+      #     echo "DB_USER=${DB_USER}" >> $GITHUB_ENV
+      #     echo "DB_PASSWORD=${DB_PASSWORD}" >> $GITHUB_ENV
+      #     echo "DB_NAME=${DB_NAME}" >> $GITHUB_ENV
+# 
+      # - name: Run tests
+      #   run: mvn clean test -X
+      - name: testing
         run: |
-          echo "DB_HOST=${DB_HOST}" >> $GITHUB_ENV
-          echo "DB_PORT=${DB_PORT}" >> $GITHUB_ENV
-          echo "DB_USER=${DB_USER}" >> $GITHUB_ENV
-          echo "DB_PASSWORD=${DB_PASSWORD}" >> $GITHUB_ENV
-          echo "DB_NAME=${DB_NAME}" >> $GITHUB_ENV
-
-      - name: Run tests
-        run: mvn clean test -X
+          echo tensting...
+          sleep 10
+        shell: bash
 
 
   # call_backend_ci:
