--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -39,6 +39,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - extract_version
+    if: github.ref == 'refs/heads/main'
+    environment: Production
     services:
       postgres:
         image: postgres:latest
