--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -35,53 +35,33 @@ jobs:
       - name: Upload version into file
         run: |
           ./upload_version.sh "$NEW_VERSION"
+          
   testing:
     runs-on: ubuntu-latest
     needs:
       - extract_version
     if: github.ref == 'refs/heads/main'
+
+    env:
+      DB_HOST: ${{ secrets.DB_HOST }}
+      DB_PORT: ${{ secrets.DB_PORT }}
+      DB_USER: ${{ secrets.DB_USER }}
+      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      DB_NAME: ${{ secrets.DB_NAME }}
     environment: Production
-    # services:
-    #   postgres:
-    #     image: postgres:latest
-    #     ports:
-    #       - 5432:5432
-    #     env:
-    #       POSTGRES_USER: ${{ secrets.DB_USER }}
-    #       POSTGRES_PASSWORD: ${{ secrets.DB_PASSWORD }}
-    #       POSTGRES_DB: ${{ secrets.DB_NAME }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # - name: Set up JDK 17
-      #   uses: actions/setup-java@v3
-      #   with:
-      #     java-version: 17
-      #     distribution: 'temurin'
-# 
-      # - name: Export database secrets
-      #   env:
-      #     DB_HOST: ${{ secrets.DB_HOST }}
-      #     DB_PORT: ${{ secrets.DB_PORT }}
-      #     DB_USER: ${{ secrets.DB_USER }}
-      #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      #     DB_NAME: ${{ secrets.DB_NAME }}
-      #   run: |
-      #     echo "DB_HOST=${DB_HOST}" >> $GITHUB_ENV
-      #     echo "DB_PORT=${DB_PORT}" >> $GITHUB_ENV
-      #     echo "DB_USER=${DB_USER}" >> $GITHUB_ENV
-      #     echo "DB_PASSWORD=${DB_PASSWORD}" >> $GITHUB_ENV
-      #     echo "DB_NAME=${DB_NAME}" >> $GITHUB_ENV
-# 
-      # - name: Run tests
-      #   run: mvn clean test -X
-      # - name: testing
-      #   run: |
-      #     echo testing...
-      #     sleep 10
-      #   shell: bash
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'temurin'
+
+      - name: Run tests
+        run: mvn test    
 
 
   # call_backend_ci:
