--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -36,32 +36,32 @@ jobs:
         run: |
           ./upload_version.sh "$NEW_VERSION"
           
-  testing:
-    runs-on: ubuntu-latest
-    needs:
-      - extract_version
-    if: github.ref == 'refs/heads/main'
-
-    env:
-      DB_HOST: ${{ secrets.DB_HOST }}
-      DB_PORT: ${{ secrets.DB_PORT }}
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-    environment: Production
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'temurin'
-
-      - name: Run tests
-        run: mvn test    
+  # testing:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - extract_version
+  #   if: github.ref == 'refs/heads/main'
+# 
+  #   env:
+  #     DB_HOST: ${{ secrets.DB_HOST }}
+  #     DB_PORT: ${{ secrets.DB_PORT }}
+  #     DB_USER: ${{ secrets.DB_USER }}
+  #     DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+  #     DB_NAME: ${{ secrets.DB_NAME }}
+  #   environment: Production
+# 
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+# 
+  #     - name: Set up JDK 17
+  #       uses: actions/setup-java@v3
+  #       with:
+  #         java-version: 17
+  #         distribution: 'temurin'
+# 
+  #     - name: Run tests
+  #       run: mvn test    
 
 
   call_backend_ci:
