--- a/.github/workflows/CI-CD.yaml
+++ b/.github/workflows/CI-CD.yaml
@@ -81,7 +81,7 @@ jobs:
   call_backend_cd:
     needs:
       - extract_version
-      - call_backend_ci
+      # - call_backend_ci
     uses: stemdo-labs/final-project-exercise-javierrochadev/.github/workflows/backend-CD.yaml@main
     with:
       image_name: "myapp-backend"
